--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,8 @@
  */
 
  @import url('base/reset.scss');
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
  @import url('base/_.scss');
  @import url('components/common/_.scss');
  @import url('components/footer/_.scss');
@@ -29,7 +31,8 @@
  /******************************/
 
  html {
-   font-family: sans-serif;
+  //  font-family: sans-serif;
+  font-family: futura;
   //  overflow: hidden;
  }
 
