--- a/app/assets/stylesheets/components/footer/_.scss
+++ b/app/assets/stylesheets/components/footer/_.scss
@@ -12,4 +12,15 @@ $drk-text: #CDCDCD;
   color: $drk-text;
   background-color: $drk-primary;
   border-top: 15px solid $lt-primary;
+
+  p {
+    height: 100%;
+    padding: 0px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    background-color: $lt-primary;
+  }
+
 }
