--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -14,10 +14,16 @@ $drk-text: #CDCDCD;
   border-bottom: 15px solid $lt-primary;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
-  p {
+  h1 {
+    height: 100%;
+    // width: 300px;
+    padding: 0px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 25px;
     font-weight: bold;
-    font-family: 'Lobster', cursive;
+    background-color: $lt-primary;
   }
 
   button {
@@ -25,13 +31,18 @@ $drk-text: #CDCDCD;
     border-radius: 2px;
     font-size: 15px;
     font-weight: bold;
-    // background-color: $lt-primary;
-    // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    transition: .5s;
+    transition: 1s;
+
+    i {
+      margin-right: 5px;
+    }
+
   }
 
   button:hover {
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    i {
+      transform: scale(1.5);
+    }
   }
 
 }
