--- a/app/assets/stylesheets/components/footer/_.scss
+++ b/app/assets/stylesheets/components/footer/_.scss
@@ -12,6 +12,7 @@ $drk-text: #CDCDCD;
   color: $drk-text;
   background-color: $drk-primary;
   border-top: 15px solid $lt-primary;
+   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
   p {
     height: 100%;
@@ -21,6 +22,7 @@ $drk-text: #CDCDCD;
     align-items: center;
     font-weight: bold;
     background-color: $lt-primary;
+    box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
   }
 
 }
