--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -1,21 +1,23 @@
 $drk-primary: #1c1c1c;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
+@import "account_dropdown";
 
 .navbar-container {
   height: 80px;
   width: 100%;
   padding: 0px 100px;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: $drk-text;
   background-color: $drk-primary;
   border-bottom: 15px solid $lt-primary;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
   h1 {
-    height: 100%;
+    height: 99%;
     // width: 300px;
     padding: 0px 40px;
     display: flex;
@@ -24,6 +26,7 @@ $drk-text: #CDCDCD;
     font-size: 25px;
     font-weight: bold;
     background-color: $lt-primary;
+    box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
   }
 
   button {
@@ -44,5 +47,4 @@ $drk-text: #CDCDCD;
       transform: scale(1.5);
     }
   }
-
 }
