--- a/app/assets/stylesheets/components/navbar/settings_dropdown.scss
+++ b/app/assets/stylesheets/components/navbar/settings_dropdown.scss
@@ -2,15 +2,15 @@ $drk-primary: #1c1c1c;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 
-.account-dropdown {
+.settings-dropdown {
   z-index: 11;
   position: absolute;
-  right: 100px;
+  left: 100px;
   top: 80px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-.account-dropdown-list {
+.settings-dropdown-list {
 padding-bottom: 15px;
 display: flex;
 flex-direction: column;
