--- a/app/assets/stylesheets/components/navbar/account_dropdown.scss
+++ b/app/assets/stylesheets/components/navbar/account_dropdown.scss
@@ -2,13 +2,33 @@ $drk-primary: #1c1c1c;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 
-.account-dropdown {
-  z-index: 11;
-  position: absolute;
-  right: 100px;
-  top: 80px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    right: 0px;
+    top: 0px;
+  }
+
+  100% {
+    opacity: 1;
+    top: 80px;
+    right: 100px;
+  }
 }
+
+.account-dropdown {
+  position: absolute;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  opacity: 0;
+
+  animation-name: slideIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+}
+
+
 
 .account-dropdown-list {
 padding-bottom: 15px;
