--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -4,7 +4,7 @@ $drk-text: #CDCDCD;
 
 .relative-content {
   min-width: 900px;
-  min-height: 1080px;
+  height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
