--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -10,10 +10,10 @@ $drk-text: #CDCDCD;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-image: url('http://stmedia.startribune.com/images/ows_138759385328271.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  // background-image: url('http://stmedia.startribune.com/images/ows_138759385328271.jpg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-attachment: fixed;
 }
 
 .hidden {
