fixed navbar sizing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,8 @@
 
  html {
   //  font-family: sans-serif;
-  font-family: futura;
+  // font-family: futura;
+  font-family: 'Baloo Bhaina', cursive;
   //  overflow: hidden;
  }
 
