--- a/app/assets/stylesheets/components/navbar/account_dropdown.scss
+++ b/app/assets/stylesheets/components/navbar/account_dropdown.scss
@@ -5,14 +5,14 @@ $drk-text: #CDCDCD;
 @keyframes slideIn {
   0% {
     opacity: 0;
-    right: 0px;
-    top: 0px;
+    // right: 0px;
+    // top: 0px;
   }
 
   100% {
     opacity: 1;
-    top: 65px;
-    right: 90px;
+    // top: 65px;
+    // right: 90px;
   }
 }
 
@@ -21,6 +21,8 @@ $drk-text: #CDCDCD;
   position: absolute;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   opacity: 0;
+  top: 50px;
+  right: 90px;
 
   animation-name: slideIn;
   animation-iteration-count: 1;
