--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -2,25 +2,38 @@ $off-white: #e9ebee;
 $white: #F6F7F9;
 
 .splash-container {
-  height: 66%;
+  height: 100%;
   width: 50%;
-  padding: 20px 20px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   background: $off-white;
 }
 
+.splash-left {
+  margin: 0px 20px;
+  display: flex;
+  flex-direction: column;
+
+  h1 {
+    width: 100%;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+  }
+
+}
+
 .splash-top, .splash-bottom {
+  margin: 20px 0px;
   padding: 20px 20px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background: $white;
 }
 
-.splash-mid {
-  width: 100%;
+.splash-right {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   padding: 20px 20px;
@@ -28,6 +41,7 @@ $white: #F6F7F9;
   background: $white;
 
   img {
+    margin: 10px 0px;
     height: 90px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
