--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -29,7 +29,7 @@ $drk-text: #CDCDCD;
   height: 50px;
   width: 100%;
   padding: 0px 100px;
-  position: relative;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
