--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -5,10 +5,11 @@ $off-white: #e9ebee;
 $white: #F6F7F9;
 
 .relative-content {
+  height: 100vh;
   min-width: 900px;
   // min-height: 1090px;
-  min-height: 100vh;
-  position: relative;
+  min-height: 1080px;
+  // position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -22,9 +23,9 @@ $white: #F6F7F9;
 
 .app-container {
   height: 100%;
+  min-height: 980px;
   width: 100%;
   margin-top: 50px;
-  margin-bottom: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
