--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -4,39 +4,53 @@ $white: #F6F7F9;
 .splash-container {
   height: 100%;
   width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: $off-white;
-}
-
-.splash-left {
-  margin: 0px 20px;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: $off-white;
 
-  h1 {
+  .splash-title {
+    padding-left: 20px;
     width: 100%;
-    text-align: center;
-    font-size: 40px;
-    font-weight: bold;
+    text-align: left;
+    font-size: 25px;
   }
 
 }
 
+.splash-body {
+  padding-top: 15px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.splash-left {
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+}
+
 .splash-top, .splash-bottom {
-  margin: 20px 0px;
   padding: 20px 20px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background: $white;
 }
 
+.splash-bottom {
+  margin-top: 20px;
+}
+
 .splash-right {
+  height: 600px;
+  padding: 20px 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding: 20px 20px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background: $white;
 
