--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -45,7 +45,7 @@ $white: #F6F7F9;
 }
 
 .splash-right {
-  height: 600px;
+  // height: 600px;
   padding: 20px 20px;
   display: flex;
   flex-direction: column;
@@ -56,6 +56,9 @@ $white: #F6F7F9;
 
   img {
     margin: 10px 0px;
+    padding: 10px;
+    // height: 120px;
+    width: 90px;
     height: 90px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
