splash pool styling

--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -28,6 +28,7 @@ $drk-text: #CDCDCD;
 .navbar-container {
   height: 50px;
   width: 100%;
+  min-width: 900px;
   padding: 0px 100px;
   position: fixed;
   display: flex;
