--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -25,6 +25,7 @@ $white: #F6F7F9;
   height: 100%;
   min-height: 980px;
   width: 100%;
+  min-width: 900px;
   margin-top: 50px;
   display: flex;
   justify-content: center;
