--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -1,4 +1,6 @@
 $off-white: #e9ebee;
+$lt-primary: #2d2d2d;
+$drk-text: #CDCDCD;
 
 .pool-container {
   height: 100%;
@@ -7,10 +9,11 @@ $off-white: #e9ebee;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  background: $lt-primary;
 }
 
 .pool-top {
-  height: 300px;
+  height: 327px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -21,27 +24,30 @@ $off-white: #e9ebee;
 
 
   h1 {
-    font-size: 25px;
+    font-size: 40px;
   }
 
   p {
     text-align: center;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 20px;
+    line-height: 25px;
   }
 
 }
 
 .pool-mid {
-  height: 300px;
+  height: 327px;
   width: 100%;
+  padding: 40px 0px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  background: $lt-primary;
 
   h1 {
-    font-size: 25px;
+    font-size: 30px;
+    color: white;
   }
 
   .pool-mid-carousel {
@@ -49,25 +55,31 @@ $off-white: #e9ebee;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: white;
+    background: $off-white;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    border-radius: 2px;
 
     img {
       margin: 0px 10px;
       padding: 5px;
       width: 90px;
       height: 90px;
+      border-radius: 2px;
       background: $off-white;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
 
+    .shield {
+      background: white;
+      border: 5px $off-white solid;
+    }
   }
-
 }
 
 .pool-bottom {
-  height: 300px;
+  height: 327px;
   width: 100%;
+  padding: 40px 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -76,7 +88,7 @@ $off-white: #e9ebee;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   h1 {
-    font-size: 25px;
+    font-size: 30px;
   }
 
   .pool-bottom-body {
@@ -87,10 +99,7 @@ $off-white: #e9ebee;
 
     p {
       text-align: center;
-      font-size: 15px;
-      line-height: 20px;
+      font-size: 20px;
     }
-
   }
-
-  }
+}
