--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -2,6 +2,30 @@ $off-white: #e9ebee;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 
+@keyframes welcomeIn {
+  0% {
+    opacity: 0;
+    margin-left: 100px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
+}
+
+@keyframes paraIn {
+  0% {
+    opacity: 0;
+    margin-left: 100px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
+}
+
 .pool-container {
   height: 100%;
   width: 100%;
@@ -22,17 +46,49 @@ $drk-text: #CDCDCD;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
+  span {
+    margin-left: 100px;
+    opacity: 0;
+    animation-name: welcomeIn;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 4s;
+    animation-fill-mode: forwards;
+  }
 
   h1 {
     font-size: 40px;
+    opacity: 1;
+
   }
 
   p {
     text-align: center;
     font-size: 20px;
     line-height: 25px;
+
+    margin-left: 100px;
+    opacity: 0;
+    animation-name: paraIn;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
   }
 
+}
+
+@keyframes midIn {
+  0% {
+    opacity: 0;
+    margin-left: 100px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
 }
 
 .pool-mid {
@@ -44,6 +100,15 @@ $drk-text: #CDCDCD;
   justify-content: space-around;
   align-items: center;
   background: $lt-primary;
+
+  margin-left: 100px;
+  opacity: 0;
+  animation-name: midIn;
+  animation-delay: 6s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
 
   h1 {
     font-size: 30px;
@@ -76,6 +141,18 @@ $drk-text: #CDCDCD;
   }
 }
 
+@keyframes bottomIn {
+  0% {
+    opacity: 0;
+    margin-left: 100px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0px;
+  }
+}
+
 .pool-bottom {
   height: 327px;
   width: 100%;
@@ -89,6 +166,15 @@ $drk-text: #CDCDCD;
 
   h1 {
     font-size: 30px;
+
+    margin-left: 100px;
+    opacity: 0;
+    animation-name: bottomIn;
+    animation-delay: 9s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
   }
 
   .pool-bottom-body {
@@ -96,6 +182,15 @@ $drk-text: #CDCDCD;
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    margin-left: 100px;
+    opacity: 0;
+    animation-name: bottomIn;
+    animation-delay: 12s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
 
     p {
       text-align: center;
