standing box maping

--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -3,6 +3,7 @@ $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
+@import "standings_box";
 
 .relative-content {
   height: 100vh;
