--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -1,8 +1,15 @@
+$drk-primary: #1c1c1c;
+$lt-primary: #2d2d2d;
+$drk-text: #CDCDCD;
+$off-white: #e9ebee;
+$white: #F6F7F9;
+
 .home-container {
   height: 100%;
-  width: 100%;
-  padding: 50px 250px;
+  width: 50%;
+  padding: 50px 0px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background: $off-white;
 }
