--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -1,13 +1,20 @@
 .standings-box {
   padding: 20px 20px;
-  padding-top: 10px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  position: relative;
 
   .standings-box-title {
-    width: 100%;
-    text-align: center;
-    font-size: 25px;
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      padding-left: 5px;
+      padding-top: 5px;
+      line-height: 15px;
+      width: 100%;
+      text-align: left;
+      font-size: 15px;
+      opacity: .5;
   }
 }
 
@@ -16,8 +23,9 @@
 
   div {
     padding: 5px;
-    text-align: center;
+    text-align: left;
     border: .2px black solid;
+    border-top: none;
   }
 
   .title {
@@ -45,7 +53,8 @@
 
   div {
     padding: 5px;
-    text-align: center;
+    text-align: left;
+    border-bottom: .2px black solid;
   }
 
   .title {
