--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -1,13 +1,15 @@
 .standings-box {
-  padding: 20px 20px;
+  padding: 10px;
+  padding-top: 20px;
+  border-radius: 5px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: relative;
 
   .standings-box-title {
       position: absolute;
-      top: 1px;
-      left: 1px;
+      top: 2px;
+      left: 2px;
       padding-left: 5px;
       padding-top: 5px;
       line-height: 15px;
