--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -13,7 +13,6 @@ $drk-text: #CDCDCD;
   }
 }
 
-
 .fa-angle-down, .fa-angle-right {
   opacity: 0;
 
@@ -37,6 +36,7 @@ $drk-text: #CDCDCD;
   background-color: $drk-primary;
   border-bottom: 15px solid $lt-primary;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  z-index: 100;
 
   h1 {
     height: 100%;
