--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -3,13 +3,14 @@ $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
+@import "pool_list";
 
 .home-container {
   height: 100%;
   width: 50%;
   padding: 50px 0px;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   background: $off-white;
 }
