--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -31,6 +31,7 @@ $white: #F6F7F9;
   justify-content: center;
   align-items: center;
   background: $off-white;
+  overflow-y: scroll;
 }
 
 .hidden {
