--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -30,7 +30,7 @@ $drk-text: #CDCDCD;
   padding: 0px 100px;
   position: fixed;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   color: white;
   background-color: $drk-primary;
@@ -49,11 +49,10 @@ $drk-text: #CDCDCD;
     font-weight: bold;
     background-color: $lt-primary;
     box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
-    font-family: 'Baloo Bhaina', cursive;
   }
 
   .account-button {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -61,6 +60,7 @@ $drk-text: #CDCDCD;
     font-size: 15px;
     font-weight: bold;
     transition: .5s;
+    right: 20%;
 
     i {
       position: absolute;
@@ -69,7 +69,7 @@ $drk-text: #CDCDCD;
   }
 
   .info-button {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -77,6 +77,7 @@ $drk-text: #CDCDCD;
     font-size: 15px;
     font-weight: bold;
     transition: .5s;
+    left: 20%;
 
     i {
       position: absolute;
