--- a/app/assets/stylesheets/components/navbar/account_dropdown.scss
+++ b/app/assets/stylesheets/components/navbar/account_dropdown.scss
@@ -5,14 +5,10 @@ $drk-text: #CDCDCD;
 @keyframes slideIn {
   0% {
     opacity: 0;
-    // right: 0px;
-    // top: 0px;
   }
 
   100% {
     opacity: 1;
-    // top: 65px;
-    // right: 90px;
   }
 }
 
@@ -22,7 +18,7 @@ $drk-text: #CDCDCD;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   opacity: 0;
   top: 45px;
-  right: 90px;
+  right: 20%;
 
   animation-name: slideIn;
   animation-iteration-count: 1;
@@ -30,8 +26,6 @@ $drk-text: #CDCDCD;
   animation-duration: .5s;
   animation-fill-mode: forwards;
 }
-
-
 
 .account-dropdown-list {
   padding-bottom: 15px;
