--- a/app/assets/stylesheets/components/navbar/settings_dropdown.scss
+++ b/app/assets/stylesheets/components/navbar/settings_dropdown.scss
@@ -5,14 +5,10 @@ $drk-text: #CDCDCD;
 @keyframes diveIn {
   0% {
     opacity: 0;
-    // left: 0px;
-    // top: 0px;
   }
 
   100% {
     opacity: 1;
-    // top: 65px;
-    // left: 90px;
   }
 }
 
@@ -22,7 +18,7 @@ $drk-text: #CDCDCD;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   opacity: 0;
   top: 45px;
-  left: 90px;
+  left: 19%;
 
   animation-name: diveIn;
   animation-iteration-count: 1;
@@ -52,5 +48,4 @@ background-color: $lt-primary;
     background-color: white;
     color: black;
   }
-
 }
