--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -1,3 +1,5 @@
+$off-white: #e9ebee;
+
 .standings-box {
   margin-left: 20px;
   padding: 10px;
@@ -27,7 +29,7 @@
   div {
     padding: 5px;
     text-align: left;
-    border: .2px black solid;
+    border: .2px $off-white solid;
     border-top: none;
   }
 
@@ -53,11 +55,13 @@
 
 .standings-box-top-item {
   display: flex;
+  margin-top: 10px;
 
   div {
-    padding: 5px;
+    padding: 0px 5px;
     text-align: left;
-    border-bottom: .2px black solid;
+    border-bottom: .2px $off-white solid;
+    background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
   }
 
   .title {
