--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -25,12 +25,11 @@ $off-white: #e9ebee;
 
 .standings-box-item {
   display: flex;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   div {
     padding: 5px;
     text-align: left;
-    border: .2px $off-white solid;
-    border-top: none;
   }
 
   .title {
@@ -56,12 +55,12 @@ $off-white: #e9ebee;
 .standings-box-top-item {
   display: flex;
   margin-top: 10px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   div {
     padding: 0px 5px;
     text-align: left;
-    border-bottom: .2px $off-white solid;
-    background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
+    background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
 
   .title {
