--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -15,24 +15,28 @@ $white: #F6F7F9;
 .pool-list-item {
   width: 200px;
   padding: 5px;
-  border: .2px $off-white solid;
-  border-top: none;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   p {
     transition: .5s;
     cursor: pointer;
   }
 
-  p:hover {
-    opacity: .5;
-  }
+  // p:hover {
+  //   opacity: .5;
+  // }
+}
+
+.pool-list-item:hover {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .pool-list-top-item {
   margin-top: 10px;
   width: 200px;
   padding: 0px 5px;
-  border-bottom: .2px $off-white solid;
+  // border-bottom: .2px $off-white solid;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
 }
 
