--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -7,10 +7,43 @@ $white: #F6F7F9;
 
 .home-container {
   height: 100%;
-  width: 50%;
+  // width: 50%;
   padding: 50px 0px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   background: $off-white;
+}
+
+.home-left {
+  display: flex;
+  flex-direction: column;
+}
+
+.home-right {
+  display: flex;
+}
+
+.home-message {
+  width: 200px;
+  padding: 10px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  background: white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  h2 {
+    font-size: 25px;
+    line-height: 25px;
+    margin-bottom: 5px;
+  }
+
+  p {
+    font-size: 15px;
+    line-height: 20px;
+  }
 }
