--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -5,15 +5,17 @@ $off-white: #e9ebee;
 $white: #F6F7F9;
 
 .pool-list {
+  width: 200px;
   padding: 10px;
   padding-top: 20px;
   background: white;
   position: relative;
   border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .pool-list-item {
-  width: 200px;
+  width: 100%;
   padding: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
@@ -33,7 +35,6 @@ $white: #F6F7F9;
 
 .pool-list-top-item {
   margin-top: 10px;
-  width: 200px;
   padding: 0px 5px;
   // border-bottom: .2px $off-white solid;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
