--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -6,8 +6,7 @@ $white: #F6F7F9;
 
 .pool-list {
   width: 200px;
-  padding: 10px;
-  padding-top: 20px;
+  padding: 5px;
   background: white;
   position: relative;
   border-radius: 5px;
@@ -34,7 +33,7 @@ $white: #F6F7F9;
 }
 
 .pool-list-top-item {
-  margin-top: 10px;
+  // margin-top: 10px;
   padding: 0px 5px;
   // border-bottom: .2px $off-white solid;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
