--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -1,3 +1,9 @@
+$drk-primary: #1c1c1c;
+$lt-primary: #2d2d2d;
+$drk-text: #CDCDCD;
+$off-white: #e9ebee;
+$white: #F6F7F9;
+
 .chat-box {
   width: 100%;
   padding: 5px;
@@ -14,5 +20,27 @@
     font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+  }
+
+  .message-container {
+    max-height: 300px;
+    padding: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    overflow-y: scroll;
+  }
+}
+
+
+
+
+.chat-box-item {
+  font-size: 12px;
+  line-height: 15px;
+  margin: 2.5px 0px;
+
+
+  span {
+    font-size: 15px;
+    text-decoration: underline;
   }
 }
