--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -27,20 +27,53 @@ $white: #F6F7F9;
     padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     overflow-y: scroll;
+
+    .chat-box-item {
+      font-size: 12px;
+      line-height: 15px;
+      margin: 2.5px 0px;
+
+      span {
+        font-size: 15px;
+        text-decoration: underline;
+      }
+    }
   }
-}
 
+  .chat-form {
+    height: 30px;
+    width: 100%;
+    // padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 
+    i {
+      margin-bottom: 2px;
+    }
 
+    input {
+      height: 15px;
+      width: 80%;
+      margin-left: 2px;
+      border-bottom: .2px $lt-primary solid;
+      font-size: 15px;
+    }
 
-.chat-box-item {
-  font-size: 12px;
-  line-height: 15px;
-  margin: 2.5px 0px;
+    button {
+      // height: 15px;
+      margin-left: 5px;
+      padding: 5px;
+      padding-bottom: 3px;
+      font-size: 12px;
+      line-height: 12px;
+      border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+    }
 
-
-  span {
-    font-size: 15px;
-    text-decoration: underline;
+    button:hover {
+      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    }
   }
 }
