--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -25,10 +25,9 @@ $white: #F6F7F9;
 }
 
 .home-message {
-  width: 200px;
+  margin-bottom: 10px;
   padding: 5px;
   padding-bottom: 5px;
-  margin-bottom: 10px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 5px;
@@ -36,23 +35,20 @@ $white: #F6F7F9;
   flex-direction: column;
   justify-content: center;
 
-
-  h2 {
+  .title {
     width: 100%;
-    padding-left: 5px;
-    padding-top: 5px;
     line-height: 20px;
+    padding-top: 5px;
+    padding-left: 5px;
     margin-bottom: 5px;
-    border-radius: 0px;
     font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
 
-  p {
+  div {
+    padding: 0px 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     font-size: 15px;
-    line-height: 15px;
-    padding-top: 5px;
-    padding-left: 2px;
   }
 }
