--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,10 +29,11 @@
  /******************************/
 
  html {
-  //  font-family: sans-serif;
-  // font-family: futura;
-  font-family: 'Baloo Bhaina', cursive;
-  //  overflow: hidden;
+  //  font-family: 'Karla', sans-serif;
+  //  font-family: 'Montserrat', sans-serif;
+  //  font-family: 'Montez', cursive;
+   font-family: 'Baloo Bhaina', cursive;
+  //  font-family: 'Lobster', cursive;
  }
 
  /******************************/
