--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -18,10 +18,11 @@ $drk-text: #CDCDCD;
 
 .pool-standings {
   display: flex;
+  flex-direction: column;
 }
 
 .pool-coms {
-  width: 200px;
+  width: 300px;
   display: flex;
   flex-direction: column;
 }
