--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -32,6 +32,7 @@ $white: #F6F7F9;
   align-items: center;
   background: $off-white;
   overflow-y: scroll;
+  font-family: 'Karla', sans-serif;
 }
 
 .hidden {
