--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -9,14 +9,16 @@ $white: #F6F7F9;
   padding: 5px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  // font-family: futura;
+  font-family: 'Karla', sans-serif;
 
   h2 {
     width: 100%;
-    padding-left: 5px;
-    padding-top: 5px;
+    // padding-left: 5px;
+    // padding-top: 5px;
+    padding: 5px;
     line-height: 20px;
     margin-bottom: 5px;
-    border-radius: 0px;
     font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
@@ -68,10 +70,12 @@ $white: #F6F7F9;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      transition: .2s;
     }
 
     button:hover {
-      box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+      // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+      margin-bottom: 2.5px;
     }
   }
 }
