--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -3,6 +3,7 @@ $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 @import "account_dropdown";
 @import "settings_dropdown";
+@import "pool_dropdown";
 
 @keyframes arrowIn {
   0% {
@@ -60,7 +61,7 @@ $drk-text: #CDCDCD;
     font-size: 15px;
     font-weight: bold;
     transition: .5s;
-    right: 20%;
+    right: 10%;
 
     i {
       position: absolute;
@@ -77,7 +78,7 @@ $drk-text: #CDCDCD;
     font-size: 15px;
     font-weight: bold;
     transition: .5s;
-    left: 20%;
+    left: 10%;
 
     i {
       position: absolute;
