--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -40,8 +40,7 @@ $white: #F6F7F9;
   .title {
     width: 100%;
     line-height: 20px;
-    padding-top: 5px;
-    padding-left: 5px;
+    padding: 5px;
     margin-bottom: 5px;
     font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -49,7 +48,7 @@ $white: #F6F7F9;
   }
 
   div {
-    padding: 0px 5px;
+    padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     font-size: 15px;
   }
