--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -30,19 +30,20 @@ $white: #F6F7F9;
 
 .pool-list-top-item {
   // margin-top: 10px;
-  padding: 0px 5px;
+  padding: 5px;
+  // padding-bottom: 5px;
   // border-bottom: .2px $off-white solid;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
 }
 
-.pool-list-title {
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  padding-left: 5px;
-  padding-top: 5px;
-  line-height: 15px;
-  font-size: 15px;
-  opacity: .5;
-}
+// .pool-list-title {
+//   position: absolute;
+//   top: 2px;
+//   left: 2px;
+//   padding-left: 5px;
+//   padding-top: 5px;
+//   line-height: 15px;
+//   font-size: 15px;
+//   opacity: .5;
+// }
