--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -28,7 +28,6 @@ $drk-text: #CDCDCD;
 }
 
 .pool-message {
-  // width: 200px;
   margin-bottom: 10px;
   padding: 5px;
   padding-bottom: 5px;
@@ -39,12 +38,9 @@ $drk-text: #CDCDCD;
   flex-direction: column;
   justify-content: center;
 
-
   .title {
     width: 100%;
-    line-height: 20px;
-    padding-top: 5px;
-    padding-left: 5px;
+    padding: 5px;
     margin-bottom: 5px;
     font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -52,7 +48,7 @@ $drk-text: #CDCDCD;
   }
 
   div {
-    padding: 0px 5px;
+    padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     font-size: 15px;
   }
