--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -45,26 +45,33 @@ $white: #F6F7F9;
   .chat-form {
     height: 30px;
     width: 100%;
+    padding-top: 5px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-end;
 
     i {
       margin-bottom: 2px;
+      color: $lt-primary;
+      display: none;
     }
 
     input {
-      height: 15px;
+      height: 20px;
       width: 80%;
-      margin-left: 2px;
-      border-bottom: .2px $lt-primary solid;
+      padding-left: 2px;
+      border: .2px rgba(51, 51, 51,.2) solid;
       font-size: 15px;
     }
 
     button {
+      width: 20%;
+      height: 20px;
       margin-left: 5px;
-      padding: 5px;
-      padding-bottom: 3px;
+      margin-bottom: 1px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       font-size: 12px;
       line-height: 12px;
       border-radius: 2px;
@@ -75,7 +82,7 @@ $white: #F6F7F9;
 
     button:hover {
       // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-      margin-bottom: 2.5px;
+      margin-bottom: 3px;
     }
   }
 }
