--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -24,10 +24,15 @@ $white: #F6F7F9;
     background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
 
+  .message-container-container {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding: 5px;
+  }
+
   .message-container {
     max-height: 300px;
-    padding: 5px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    // padding: 5px;
+    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     overflow-y: scroll;
 
     .chat-box-item {
@@ -43,24 +48,21 @@ $white: #F6F7F9;
   }
 
   .chat-form {
-    height: 30px;
+    margin-top: 5px;
     width: 100%;
-    padding-top: 5px;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
 
     .chat-input {
-      height: 20px;
+      height: 30px;
       width: 80%;
-      padding-left: 2px;
+      padding-left: 5px;
       border: .2px rgba(51, 51, 51,.2) solid;
       font-size: 15px;
     }
 
     .chat-form-button {
       width: 20%;
-      height: 20px;
+      height: 30px;
       margin-left: 5px;
       margin-bottom: 1px;
       display: flex;
@@ -75,8 +77,7 @@ $white: #F6F7F9;
     }
 
     .chat-form-button:hover {
-      // box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-      margin-bottom: 3px;
+      color: red;
     }
   }
 }
