--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -9,13 +9,10 @@ $white: #F6F7F9;
   padding: 5px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  // font-family: futura;
   font-family: 'Karla', sans-serif;
 
   h2 {
     width: 100%;
-    // padding-left: 5px;
-    // padding-top: 5px;
     padding: 5px;
     line-height: 20px;
     margin-bottom: 5px;
@@ -30,9 +27,7 @@ $white: #F6F7F9;
   }
 
   .message-container {
-    max-height: 300px;
-    // padding: 5px;
-    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    height: 300px;
     overflow-y: scroll;
 
     .chat-box-item {
