--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -26,7 +26,8 @@ $white: #F6F7F9;
   // min-height: 980px;
   width: 100%;
   min-width: 900px;
-  margin-top: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
