--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -5,7 +5,7 @@ $drk-text: #CDCDCD;
 
 .picks-container {
   height: 100%;
-  padding: 20px 0px;
+  padding: 10px 0px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -17,38 +17,40 @@ $drk-text: #CDCDCD;
     flex-direction: column;
 
     button {
-      font-size: 15px;
+      font-size: 18px;
       padding: 5px;
-      margin-bottom: 5px;
+      // margin-bottom: 5px;
       display: flex;
-      justify-content: space-around;
+      justify-content: flex-start;
       align-items: center;
-      background: white;
-    }
-
-    .picks-selection-container-container {
-      padding: 5px;
-      background: white;
+      // background: white;
     }
 
     .picks-selection-container {
-      height: 600px;
+      width: 292px;
+      margin-bottom: 10px;
+      display: flex;
+      flex-wrap: wrap;
       overflow-y: scroll;
+      // background: white;
     }
 
     .selection-item {
       display: flex;
       flex-direction: row;
-      height: 80px;
-      margin-bottom: 5px;
+      height: 50px;
+      margin: 5px;
+
 
       img {
-        border-radius: 2px;
+        width: 50px;
+        border-radius: 50%;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.24);
       }
 
       div {
         height: 100%;
-        margin: 0px 10px;
+        padding: 0px 10px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -57,17 +59,23 @@ $drk-text: #CDCDCD;
 
     .picks-form {
       position: absolute;
-      top: 0px;
-      left: -30px;
+      top: 3px;
+      left: -35px;
       display: flex;
       flex-direction: column;
-      background: white;
+      // background: white;
 
       button {
-        padding: 5px;
         width: 25px;
-        text-align: right;
+        padding-bottom: 5px;
+        font-size: 15px;
         cursor: pointer;
+        // border-bottom: .2px rgba(51, 51, 51,.2) solid;
+        transition: .5s;
+      }
+
+      button:hover {
+        color: red;
       }
     }
   }
