--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -6,8 +6,8 @@ $drk-text: #CDCDCD;
 @import "mod_board";
 
 .pool-container {
-  min-height: 100%;
-  padding: 20px 0px;
+  height: 100%;
+  padding: 10px 0px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
